--- a/content/players.html
+++ b/content/players.html
@@ -1,3 +1,4 @@
+<!-- INPUT FIELDS AND BUTTON TO UPDATE PLAYER NAMES -->
 <div>
     <form id="players">
         Player 1: <input type="text" id="player1" name="player1">
