--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script data-main="js/main" src="main.js"></script>
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
-    <body>
+    <body onload="initializeTable()">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser.
               Please <a href="http://browsehappy.com/">upgrade your browser</a>
@@ -21,81 +21,59 @@
         <![endif]-->
         <!-- Add your site or application content here -->
 
-        <p>Hollywood Gin Scoresheet</p>
-
-        Player 1: <b class="player1"></b>
-        <br>
-        Player 2: <b class="player2"></b>
-        <br>
+        <h1>Hollywood Gin Scoresheet</h1>
+        <table>
+            <tr>
+                <td>Player 1:</td>
+                <td><div class="player1" id="player1" onblur="updatePlayer('player1', 'player1')" contenteditable></div></td>
+            </tr>
+            <tr>
+                <td>Player 2:</td>
+                <td><div class="player2" id="player2" onblur="updatePlayer('player2','player2')" contenteditable></div></td>
+            </tr>
 
         <div class="inputButtons">
             <table>
-                <tr>
+                <tr class="inputButton">
                     <td>
-                    <input id="updatePlayers" type="submit" value="Update Players" onClick="showUpdatePlayers()">
+                        <input id="addScore" type="button" value="Add Score" onClick="showAddScore()">
+
                     </td>
-                    </tr><tr>
-                    <td>
-                        <input id="addScore" type="submit" value="Add Score" onClick="showAddScore()">
+                </tr>
+                <tr class="inputForm">
+                    <td id="scoreInput" style="display:none;">
+                        <br>
+                        <form>
+                            <select id="playerSelect" onchange="pointsInputParagraph()">
+                                <option value="selectPlayer" disabled="true" selected="selected">Select Player</option>
+                                <option value="player1" class="player1" id="p1NameSelect"></option>
+                                <option value="player2" class="player2" id="p2NameSelect"></option>
+                            </select>
+                            <select>
+                                <option value="selectAction" disabled="true" selected="selected" >Select Action</option>
+                                <option value="knock"> knocked </option>
+                                <option value="gin"> ginned </option>
+                                <option value="undercut"> undercut </option>
+                            </select>
+                            <p id="pointsInputP"></p>
+                            <input id="submitScore" type="button" value="Add" onClick="updateScore();" >
+                            <input type="button" value="Cancel" onClick="showAddScore();" >
+                        </form>
                     </td>
                 </tr>
             </table>
         </div>
 
-        <!-- INFO NEEDED TO ADD A SCORE -->
-        <div id="scoreInput" style='display:none;'>
-            <form>
-                <select id="playerSelect">
-                    <option value="selectPlayer" disabled="true" selected="selected">Select Player</option>
-                    <option value="player1" class="player1" id="p1NameSelect"></option>
-                    <option value="player2" class="player2" id="p1NameSelect"></option>
-                </select>
-                <select>
-                    <option value="selectAction" disabled="true" selected="selected">Select Action</option>
-                    <option value="knock"> knocked </option>
-                    <option value="gin"> ginned </option>
-                    <option value="undercut"> undercut </option>
-                </select>
-                . <br><br> {{ Other Player }} had
-                <br>
-                <input type="text" name="points" maxlength="3" min="0" class="pointsInput">
-                points in hand.
-                <br>
-                <br>
-                <input type="submit" value="OK" onClick="updateScore()">
-                <input type="submit" value="Cancel" onClick="clearScoresheet()">
-            </form>
+        <br>
+
+        <div class="gameTables" >
+            <!-- Data is uploaded from addTemplate functionality -->
         </div>
 
-        <!-- INPUT FIELDS AND BUTTON TO UPDATE PLAYER NAMES -->
-        <div id="playersInput" style='display:none;'>
-            <br>
-            <br>
-            <form id="players">
-                Player 1: <input type="text" id="player1Input" >
-                <br>
-                Player 2: <input type="text" id="player2Input" >
-                <br>
-                <input id="submitNames" type="submit" value="Submit" onclick="updatePlayers()">
-                <br>
-            </form>
-        </div>
-
-        <div class="game gameTables" >
-            <!--<table class="gameTable game" id="gameTable" >
-                <tr>
-                    <td class="gameTable1"></td>
-                    <td class="gameTable2"></td>
-                    <td class="gameTable3"></td>
-                </tr>
-            </table>-->
-
-        </div>
-
-        <template class="singleGame game">
-            <table class="game" style="float:left;">
+        <template class="singleGame">
+            <table class="gameTable" style="float:left;">
                 <thead>
-                    <tr class="gameNumber game">
+                    <tr class="gameNumber">
                         <th colspan=2 class="gameHeader"></th>
                     </tr>
                     <tr class="playerNames">
@@ -109,75 +87,44 @@
                 </thead>
                 <tbody class="points">
                     <tr>
-                        <td>a</td>
-                        <td>b</td>
-                    </tr>
-                    <tr>
-                        <td>c</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>e</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>g</td>
-                        <td></td>
+                        <td>
+                            <ul class="p1Scores" style="list-style-type:none">
+                                <li onblur="updateTotals();" contenteditable>1</li>
+                                <li onblur="updateTotals();" contenteditable>9</li>
+                                <li onblur="updateTotals();" contenteditable>2</li>
+                                <li onblur="updateTotals();" contenteditable>8</li>
+                                <li onblur="updateTotals();" contenteditable>3</li>
+                                <li onblur="updateTotals();" contenteditable>7</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul class="p2Scores" style="list-style-type:none">
+                                <li>4</li>
+                                <li>23</li>
+                                <li>40</li>
+                                <li>10</li>
+                            </ul>
+                        </td>
                     </tr>
                 </tbody>
                 <tfoot >
                     <tr class="gameScores" id="gameScores">
                         <th>
-                            <label class="p1Score">c</label>
+                            <label class="p1Total">100</label>
                         </th>
                         <th>
-                            <label class="p2Score">d</label>
+                            <label class="p2Total">100</label>
                         </th>
                     </tr>
                 </tfoot>
             </table>
         </template>
-
-
     </body>
 
     <script type="text/javascript">
-
-        function setPlayerNames(players) {
-            var player1Refs = document.getElementsByClassName("player1");
-            for (var i = 0; i < player1Refs.length; i++) {
-                player1Refs[i].innerHTML = players.player1;
-            }
-
-            var player2Refs = document.getElementsByClassName("player2");
-            for (var i = 0; i < player2Refs.length; i++) {
-                player2Refs[i].innerHTML = players.player2;
-            }
-        }
-
-        function toggle_visibility(id) {
-           var e = document.getElementById(id);
-           if(e.style.display == 'block')
-              e.style.display = 'none';
-           else
-              e.style.display = 'block';
-        }
-
-        function showUpdatePlayers() {
-            toggle_visibility("playersInput");
-        }
-
-        function showAddScore() {
-            toggle_visibility("scoreInput");
-        }
-
-        function updatePlayers() {
-            var inputPlayers = {};
-            inputPlayers.player1 = document.getElementById("player1Input").value;
-            inputPlayers.player2 = document.getElementById("player2Input").value;
-
-            setPlayerNames(inputPlayers);
-        }
+        var activeClass = "gameTable active";
+        var inactiveClass = "gameTable";
+        var gamesHaveStarted = false;
 
         function addTemplate(gameNo) {
             // Test to see if the browser supports the HTML template element by checking
@@ -201,18 +148,188 @@
             }
         }
 
+        function initializePlayerNames(players) {
+            updatePlayer("player1", "player1", players.player1);
+            updatePlayer("player2", "player2", players.player2);
+        }
+
+        function updatePlayer(id, className, playerName) {
+            if (!playerName) {
+                playerName = document.getElementById(id).innerHTML;
+            }
+            var playerRefs = document.getElementsByClassName(className);
+            for (var i = 0; i < playerRefs.length; i++) {
+                playerRefs[i].innerHTML = playerName;
+            }
+        }
+
+        function clearScoresheet() {
+            // TODO
+        }
+
+        function showAddScore() {
+           var e = document.getElementById("scoreInput");
+           if (e.style.display == 'block') {
+              e.style.display = 'none';
+           }
+           else {
+              e.style.display = 'block';
+              clearScoresheet();
+           }
+        }
+
+        function pointsInputParagraph() {
+            var selectElement = document.getElementById("playerSelect");
+            var selectedPlayerIndex = selectElement.selectedIndex;
+
+            var otherPlayerIndex = -1;
+            if (selectedPlayerIndex === 1) {
+                otherPlayerIndex = 2;
+            }
+            else if (selectedPlayerIndex === 2) {
+                otherPlayerIndex = 1;
+            }
+
+            if (otherPlayerIndex > 0) {
+                var otherPlayer = selectElement.options[otherPlayerIndex].text;
+            }
+
+            if (otherPlayer) {
+                var html = " had <input type='text' name='points' maxlength='3' min='0' class='pointsInput' > points in hand."
+                document.getElementById("pointsInputP").innerHTML = otherPlayer + html;
+            }
+        }
+
+        function calculate(input) {
+            // Ignore X or x.
+            if (input === "x" || input === "X") {
+                return 0;
+            }
+                // TODO: DO WE NEED +?? Should be done with button, right?
+            var total = 0;
+            var pieces = input.split("+");
+            for (var i=0; i<pieces.length; i++) {
+                total += parseInt(pieces[i]);
+            }
+            return total;
+        }
+        function calculateTotal(scoreList) {
+            var total = 0;
+            for (var i=0; i<scoreList.length; i++) {
+                total += calculate(scoreList[i].innerHTML);
+            }
+            return total;
+        }
+
+        function updateTotals() {
+            var p1Scores = document.getElementsByClassName("p1Scores");
+            var p2Scores = document.getElementsByClassName("p2Scores");
+
+            var p1Total = document.getElementsByClassName("p1Total");
+            var p2Total = document.getElementsByClassName("p2Total");
+
+            for (var i = 0; i<3; i++) {
+                var calculatedTotalP1 = calculateTotal(p1Scores[i].children);
+                p1Total[i].innerHTML = calculatedTotalP1;
+
+                var calculatedTotalP2 = calculateTotal(p2Scores[i].children);
+                p2Total[i].innerHTML = calculatedTotalP2;
+
+                var gameOver = checkGameOver(Math.max(calculatedTotalP1,calculatedTotalP2));
+                if (gameOver) {
+                    var gameNumber = i + 1;
+                    endGame(gameNumber);
+                }
+            }
+        }
+
+        function activateNextGame(numActiveGames, activeGames) {
+            // TODO: Determine which game needs to be activated and activate it.
+            if (numActiveGames === 3) {
+                // All games activated. Don't need to do anything.
+                return true;
+            }
+
+            var activeGameIds = [];
+            for (var i = 0; i < activeGames.length; i++) {
+                activeGameIds.push(activeGames[i].id);
+            }
+
+            if (activeGameIds.length === 0) {
+                // ACTIVATE FIRST GAME
+                var game1 = document.getElementById("gameNumber1");
+                game1.className = activeClass;
+
+                gamesHaveStarted = true;
+                return true;
+            }
+
+            else if (gamesHaveStarted === true) {
+                // ACTIVATE NEXT GAME
+                var lastGameId = activeGameIds.pop();
+                var lastGameNumber = lastGameId.substr(lastGameId.length - 1);
+                var nextGameNumber = parseInt(lastGameNumber) + 1;
+                var nextGameId = "gameNumber" + nextGameNumber;
+                var nextGame = document.getElementById(nextGameId);
+
+                if (nextGame) {
+                    nextGame.className = activeClass;
+                    return true;
+                }
+                else {
+                    // NEXT GAME DOESN'T EXIST. DON'T DO ANYTHING.
+                    return true;
+                }
+                return false;
+            }
+            return false;
+        }
+
+        function addScoreItem() {
+            //TODO
+
+            var initiallyActiveGames = document.getElementsByClassName(activeClass);
+            var nextGame = activateNextGame(initiallyActiveGames.length, initiallyActiveGames);
+
+            if (nextGame) {
+                var activeGames = document.getElementsByClassName(activeClass);
+                for (var i=0; i < activeGames.length; i++) {
+                    console.log(activeGames[i]);
+                    // TODO
+                }
+            }
+            else {
+                // FIGURE OUT WHY IT FAILED. IT SHOULDN'T HAVE.
+            }
+        }
+
+        function updateScore() {
+            addScoreItem();
+            updateTotals();
+        }
+
+        function checkGameOver(value) {
+            if (parseInt(value) >= 100) {
+                 return true;
+            }
+            return false;
+        }
+
+        function endGame(gameNumber) {
+            //Mark class as inactive.
+            var endedGame = document.getElementById("gameNumber" + gameNumber);
+            endedGame.className = inactiveClass;
+        }
+
+        function initializeTable() {
+            addTemplate(1);
+            addTemplate(2);
+            addTemplate(3);
+
+            initializePlayerNames({player1:"Brigid",player2:"Will"});
+        }
         </script>
 
-        <script>
-        var players = { "player1":"Brigid", "player2":"Will" };
-
-        addTemplate(1);
-        addTemplate(2);
-        addTemplate(3);
-
-        setPlayerNames(players);
-
-        </script>
 </html>
 
 
